--- a/five.css
+++ b/five.css
@@ -439,7 +439,7 @@ iframe{
 
 }
 .footer-form input{
-    color: white;
+    color: grey;
     width: 60%;
     letter-spacing: 2px;
     border: none;
